--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
             }
 
             .header_img {
-                width: 40px;
-                height: 40px
+                width: 30px;
+                height: 30px
             }
 
             .header_img img {
-                width: 45px
+                width: 30px
             }
 
             .l-navbar {
@@ -241,17 +241,23 @@
     <body id="body-pd">
         <header class="header bg-light" id="header">
             <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
-            <a class="text-dark">
-                <span class="buttondark">
-                    <label class="switch" for="darkSwitch">
-                        <input type="checkbox" id="darkSwitch">
-                        <!-- <span class="slider round"></span> -->
-                        <i onclick="myFunction(this)" class='bx bxs-moon nav_icon'></i>
-                        <script src="js/dark-mode-switch.min.js"></script>
-                    </label>
-                </span>
-            </a>
-            <!-- <div class="header_img"> <img src="img/pp.png" alt=""> </div> -->
+            <div class="row">
+                <div class="col text-center pt-md-1">
+                    <a class="text-dark">
+                        <span class="buttondark">
+                            <label class="switch" for="darkSwitch">
+                                <input type="checkbox" id="darkSwitch">
+                                <!-- <span class="slider round"></span> -->
+                                <i onclick="myFunction(this)" class='bx bxs-moon nav_icon'></i>
+                                <script src="js/dark-mode-switch.min.js"></script>
+                            </label>
+                        </span>
+                    </a>
+                </div>
+                <div class="col text-center">
+                    <div class="header_img"> <img src="img/pp.png" alt=""> </div>
+                </div>
+            </div>
         </header>
         <div class="l-navbar" id="nav-bar">
             <nav class="nav">
@@ -261,13 +267,13 @@
                             <img src="img/logo_02.png">
                         </span> </a>
                     <div class="nav_list">
-                        <a href="#home" class="nav_link active"> <i class='bx bx-home nav_icon'></i></i>
+                        <a href="#" class="nav_link active"> <i class='bx bx-home nav_icon'></i></i>
                             <span class="nav_name">Home</span></a>
                         <a href="#about" class="nav_link"> <i class='bx bx-info-circle nav_icon'></i></i>
                             <span class="nav_name">About</span> </a>
                         <a href="#history" class="nav_link">
                             <i class='bx bx-time nav_icon'></i></i> <span class="nav_name">History</span></a>
-                        <a href="#" class="nav_link"><i class='bx bxs-network-chart nav_icon'></i></i> <span
+                        <a href="#division" class="nav_link"><i class='bx bxs-network-chart nav_icon'></i></i> <span
                                 class="nav_name">Division</span> </a>
                         <a href="#" class="nav_link"> <i class='bx bxs-user-account nav_icon'></i><span
                                 class="nav_name">Leadership</span> </a>
@@ -325,10 +331,10 @@
                     <div class="container pb-2 px-5">
                         <div class="row">
                             <div class="col-md text-md-start">
-                                <img class="logoae pt-5" src="img/logoae.png">
+                                <img class="logoae pt-3" src="img/logoae.png">
                             </div>
                             <div class="col-md-7">
-                                <h2 class="text-dark quote text-md-end pt-5">Apa itu <span class="judul">Jurusan
+                                <h2 class="text-dark quote text-md-end pt-3">Apa itu <span class="judul">Jurusan
                                         Teknik Otomasi
                                         Manufaktur dan Mekatronika?</span></h2>
                                 <p class="text-dark pt-2 text-md-end">
@@ -449,21 +455,58 @@
                     </div>
             </section>
             <section id="division">
-                <div class="division-container mt-5">
-                    <div class="block block-1">
-                        <h1>Kominfo.</h1>
-                    </div>
-                    <div class="block block-2">
-                        <h1>Kaderisasi.</h1>
-                    </div>
-                    <div class="block block-3">
-                        <h1>Kreativitas.</h1>
-                    </div>
-                    <div class="block block-4">
-                        <h1>Kekeluargaan.</h1>
-                    </div>
-                    <div class="block block-5">
-                        <h1>Biro Kesekretariatan.</h1>
+                <div class="container pt-2 pb-5 px-5">
+                    <div class="row">
+                        <div class="col pt-4">
+                            <h2 class="text-dark quote text-md-start pt-5">Divisi <span class="judul">HIMAMO</span>
+                            </h2>
+                            <p class="text-dark pt-2 text-md-start">
+                                Divisi Himamo dibagi menjadi 12 divisi.
+                                yaitu sebagai berikut :</p>
+                        </div>
+                        <div class="col-md-10">
+                            <div class="division-container mt-5">
+                                <div class="block block-1">
+                                    <h1>Kominfo.</h1>
+                                </div>
+                                <div class="block block-2">
+                                    <h1>Kaderisasi.</h1>
+                                </div>
+                                <div class="block block-3">
+                                    <h1>Kreativitas.</h1>
+                                </div>
+                                <div class="block block-4">
+                                    <h1>Kekeluargaan.</h1>
+                                </div>
+                                <div class="block block-5">
+                                    <h1>Biro Kesekretariatan.</h1>
+                                </div>
+                                <div class="block block-6">
+                                    <h1>RnD.</h1>
+                                </div>
+                                <div class="block block-7">
+                                    <h1>Kewirausahaan.</h1>
+                                </div>
+                                <div class="block block-8">
+                                    <h1>Legislatif.</h1>
+                                </div>
+                                <div class="block block-9">
+                                    <h1>Hubungan Luar.</h1>
+                                </div>
+                                <div class="block block-10">
+                                    <h1>Sosma.</h1>
+                                </div>
+                                <div class="block block-11">
+                                    <h1>Biro Keuangan.</h1>
+                                </div>
+                                <div class="block block-12">
+                                    <h1>Biro Operasional.</h1>
+                                </div>
+                                <div class="block block-13">
+                                    <h1></h1>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -527,6 +570,16 @@
                 isAnimated: true,
                 springEffect: 0.8,
             });
+        </script>
+        <script>
+            $(document).ready(function () {
+                $(window).scroll(function () {
+                    var scroll = $(window).scrollTop();
+                    if (scroll == 0) {
+                        $(".bg-light").css("background-color", "transparent");
+                    } else if (scroll > 300 && scroll < 900) {} else {}
+                })
+            })
         </script>
     </body>
 
