--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
     <link rel="stylesheet" href="css/dark-mode.css">
     <!-- icon from boxicon -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css' rel='stylesheet'>
-    <!-- js gue -->
-    <script type='text/javascript' src='js/main.js'></script>
     <!-- font spectral-->
     <link
         href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,700;0,800;1,200;1,300;1,400;1,500;1,700&display=swap"
@@ -279,11 +277,23 @@
                                 class="nav_name">Leadership</span> </a>
                         <a href="#" class="nav_link"> <i class='bx bx-rss nav_icon'></i></i> <span
                                 class="nav_name">Blog</span> </a>
+                        <a href="http://ae.polman-bandung.ac.id/" class="nav_link"> <i class='bx bxs-school'></i><span
+                                class="nav_name">Website AE</span> </a>
                     </div>
                 </div> <a href="#" class="nav_link"> <i class='bx bx-log-out nav_icon'></i> <span
                         class="nav_name">SignOut</span> </a>
             </nav>
         </div>
+
+        <!--BUTON TO UP-->
+        <a onclick="topFunction()">
+            <div id="myBtn" class="scroll-up text-center butonUP">
+                <span>
+                    <i class='pt-2 bx bx-up-arrow-alt'></i>
+                </span>
+            </div>
+        </a>
+
         <!--Container Main start-->
         <div class="bg-light">
 
@@ -457,7 +467,7 @@
             <section id="division">
                 <div class="container pt-2 pb-5 px-5">
                     <div class="row">
-                        <div class="col pt-4">
+                        <div class="col pt-4 text-center">
                             <h2 class="text-dark quote text-md-start pt-5">Divisi <span class="judul">HIMAMO</span>
                             </h2>
                             <p class="text-dark pt-2 text-md-start">
@@ -510,9 +520,26 @@
                     </div>
                 </div>
             </section>
+            <section id="Leadership">
+                <div class="container pt-2 pb-5 px-5">
+                    <div class="row">
+                        <div class="col-md-10">
+                        </div>
+                        <div class="col pt-4 text-center">
+                            <h2 class="text-dark quote text-md-end pt-5">Sejarah Kepemimpinan <span class="judul">HIMAMO</span>
+                            </h2>
+                            <p class="text-dark pt-2 text-md-end">
+                                Sejarah Kepemimpinan Ketua Himpunan Mahasiswa Jurusan Teknik Otomasi Manufaktur dan
+                                Mekatronika. :</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <!--Container Main end-->
         <script src="js/index.js"></script>
+        <!-- js gue -->
+        <script type='text/javascript' src='js/main.js'></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
