--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
         href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
     <!-- owlcarousel -->
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
@@ -468,55 +473,52 @@
                     </div>
             </section>
             <section id="division">
-                <div class="container pt-2 pb-5 px-5">
+                <div class="container pt-3 pb-5 px-5">
                     <div class="row">
-                        <div class="col pt-4 text-center">
-                            <h2 class="text-dark quote text-md-start pt-5">Divisi <span class="judul">HIMAMO</span>
+                        <div class="col pt-5 text-center">
+                            <h2 class="text-dark quote text-md-start">Divisi <span class="judul">HIMAMO</span>
                             </h2>
-                            <p class="text-dark pt-2 text-md-start">
+                            <p class="text-dark text-md-start">
                                 Divisi Himamo dibagi menjadi 12 divisi.
                                 yaitu sebagai berikut :</p>
                         </div>
-                        <div class="col-md-10">
-                            <div class="division-container mt-5">
+                        <div class="pt-3 col-md-10">
+                            <div class="owl-carousel owl-theme">
                                 <div class="block block-1">
-                                    <h1>Kominfo.</h1>
+                                    <h1 class="text-dark" >Kominfo.</h1>
                                 </div>
                                 <div class="block block-2">
-                                    <h1>Kaderisasi.</h1>
+                                    <h1 class="text-dark" >Kaderisasi.</h1>
                                 </div>
                                 <div class="block block-3">
-                                    <h1>Kreativitas.</h1>
+                                    <h1 class="text-dark">Kreativitas.</h1>
                                 </div>
                                 <div class="block block-4">
-                                    <h1>Kekeluargaan.</h1>
+                                    <h1 class="text-dark">Kekeluargaan.</h1>
                                 </div>
                                 <div class="block block-5">
-                                    <h1>Biro Kesekretariatan.</h1>
+                                    <h1 class="text-dark">Biro Kesekretariatan.</h1>
                                 </div>
                                 <div class="block block-6">
-                                    <h1>RnD.</h1>
+                                    <h1 class="text-dark">RnD.</h1>
                                 </div>
                                 <div class="block block-7">
-                                    <h1>Kewirausahaan.</h1>
+                                    <h1 class="text-dark">Kewirausahaan.</h1>
                                 </div>
                                 <div class="block block-8">
-                                    <h1>Legislatif.</h1>
+                                    <h1 class="text-dark">Legislatif.</h1>
                                 </div>
                                 <div class="block block-9">
-                                    <h1>Hubungan Luar.</h1>
+                                    <h1 class="text-dark">Hubungan Luar.</h1>
                                 </div>
                                 <div class="block block-10">
-                                    <h1>Sosma.</h1>
+                                    <h1 class="text-dark">Sosma.</h1>
                                 </div>
                                 <div class="block block-11">
-                                    <h1>Biro Keuangan.</h1>
+                                    <h1 class="text-dark">Biro Keuangan.</h1>
                                 </div>
                                 <div class="block block-12">
-                                    <h1>Biro Operasional.</h1>
-                                </div>
-                                <div class="block block-13">
-                                    <h1></h1>
+                                    <h1 class="text-dark">Biro Operasional.</h1>
                                 </div>
                             </div>
                         </div>
@@ -525,43 +527,34 @@
             </section>
             <section id="Leadership">
                 <div class="container pt-2 pb-5 px-5">
+
                     <div class="row">
                         <div class="col-md-10">
-                            <div class="owl-carousel owl-theme">
-                                <div class="item"><h4>1</h4></div>
-                                <div class="item"><h4>2</h4></div>
-                                <div class="item"><h4>3</h4></div>
-                                <div class="item"><h4>4</h4></div>
-                                <div class="item"><h4>5</h4></div>
-                                <div class="item"><h4>6</h4></div>
-                                <div class="item"><h4>7</h4></div>
-                                <div class="item"><h4>8</h4></div>
-                                <div class="item"><h4>9</h4></div>
-                                <div class="item"><h4>10</h4></div>
-                                <div class="item"><h4>11</h4></div>
-                                <div class="item"><h4>12</h4></div>
-                            </div>
+
                         </div>
-                        <div class="col pt-4 text-center">
+                        <!-- <div class="col pt-4 text-center">
                             <h2 class="text-dark quote text-md-end pt-5">Sejarah Kepemimpinan <span
                                     class="judul">HIMAMO</span>
                             </h2>
                             <p class="text-dark pt-2 text-md-end">
                                 Sejarah Kepemimpinan Ketua Himpunan Mahasiswa Jurusan Teknik Otomasi Manufaktur dan
                                 Mekatronika. :</p>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
         </div>
         <!--Container Main end-->
-        <script src="js/index.js"></script>
+        <!--jquery-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+            integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <!-- js gue -->
         <script type='text/javascript' src='js/main.js'></script>
         <!--owlcarousel-->
-        <script src="js/owl.carousel.min.js"></script>
-        <!--jquery-->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+            integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <!-- bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
@@ -612,17 +605,6 @@
                 x.classList.toggle("bxs-sun");
             }
         </script>
-        <!-- horizontalscroll -->
-        <script>
-            var blocks = document.getElementsByClassName("block");
-            var container = document.getElementsByClassName("division-container");
-            var hs = new HorizontalScroll.default({
-                blocks: blocks,
-                container: container,
-                isAnimated: true,
-                springEffect: 0.8,
-            });
-        </script>
         <!-- buttontoUP -->
         <script>
             $(document).ready(function () {
@@ -632,6 +614,26 @@
                         $(".bg-light").css("background-color", "transparent");
                     } else if (scroll > 300 && scroll < 900) {} else {}
                 })
+            })
+        </script>
+        <script>
+            $('.owl-carousel').owlCarousel({
+                stagePadding: 0,
+                loop: true,
+                margin: 10,
+                nav: false,
+                dots: false,
+                responsive: {
+                    0: {
+                        items: 1
+                    },
+                    600: {
+                        items: 1
+                    },
+                    1000: {
+                        items: 2 
+                    }
+                }
             })
         </script>
     </body>
