--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
             padding: 0 0rem;
             font-family: var(--body-font);
             font-size: var(--normal-font-size);
-            transition: .5s
+            transition: .5s;
+            overflow-x: hidden;
         }
 
         a {
@@ -110,7 +111,8 @@
             background-color: var(--first-color);
             padding: .5rem 1rem 0 0;
             transition: .5s;
-            z-index: var(--z-fixed)
+            z-index: var(--z-fixed);
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         }
 
         .nav {
@@ -263,7 +265,7 @@
                     </a>
                 </div>
                 <div class="col text-center">
-                    <div class="header_img"> <img src="img/pp.png" alt=""> </div>
+                    <div class="header_img"> <img src="img/pp.jpg" alt=""> </div>
                 </div>
             </div>
         </header>
@@ -283,15 +285,15 @@
                             <i class='bx bx-time nav_icon'></i></i> <span class="nav_name">History</span></a>
                         <a href="#division" class="nav_link"><i class='bx bxs-network-chart nav_icon'></i></i> <span
                                 class="nav_name">Division</span> </a>
-                        <a href="#" class="nav_link"> <i class='bx bxs-user-account nav_icon'></i><span
+                        <a href="#leader" class="nav_link"> <i class='bx bxs-user-account nav_icon'></i><span
                                 class="nav_name">Leadership</span> </a>
                         <a href="#" class="nav_link"> <i class='bx bx-rss nav_icon'></i></i> <span
                                 class="nav_name">Blog</span> </a>
                         <a href="http://ae.polman-bandung.ac.id/" class="nav_link"> <i class='bx bxs-school'></i><span
                                 class="nav_name">Website AE</span> </a>
                     </div>
-                </div> <a href="#" class="nav_link"> <i class='bx bx-log-out nav_icon'></i> <span
-                        class="nav_name">SignOut</span> </a>
+                </div> <a href="#" class="nav_link"> <i class='bx bx-log-in nav_icon'></i> <span
+                        class="nav_name">Login</span> </a>
             </nav>
         </div>
 
@@ -305,7 +307,7 @@
         </a>
 
         <!--Container Main start-->
-        <div class="bg-light">
+        <div class="wrap bg-light">
 
             <section id="home">
                 <!-- <div class="parallax"> -->
@@ -348,7 +350,7 @@
 
             <section id="about" class="about">
                 <div class="container">
-                    <div class="container pb-2 px-5 pt-4">
+                    <div class="container pb-2 px-5 pt-5">
                         <div class="row">
                             <div class="col-md text-md-start">
                                 <img class="logoae pt-3" src="img/logoae.png">
@@ -407,7 +409,6 @@
                             </div>
                         </div>
                     </div>
-
                     <!-- <div class="row no-gutters">
                         <div class="col-md-4 d-flex">
                             <div class="intro d-lg-flex w-100 ftco-animate">
@@ -485,7 +486,7 @@
                                 yaitu sebagai berikut :</p>
                         </div>
                         <div class="pt-3 col-md-10">
-                            <div class="owl-carousel owl-theme">
+                            <div class="owl-carousel owl-one owl-theme">
                                 <div class="block block-1">
                                     <h1 class="text-dark">Kominfo.</h1>
                                 </div>
@@ -527,24 +528,207 @@
                     </div>
                 </div>
             </section>
-            <section id="Leadership">
-                <div class="container pt-2 pb-5 px-5">
-
+            <section id="leader">
+                <div class="container pt-4 pb-5 px-5">
                     <div class="row">
-                        <div class="col-md-10">
-
+                        <div class="col-md-8 text-md-start">
+                            <div class="featured-carousel owl-carousel owl-theme">
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-end justify-content-center"
+                                            style="background-image: url(./img/img-one.jpeg);">
+                                            <div class="text w-100">
+                                                <span class="cat">KETUA HIMPUNAN</span>
+                                                <h3><a href="#">Adnan Maulana</a></h3>
+                                                <span>Masa jabatan : 2012 s/d 2013</span>
+                                                <span>NIM : 210345003</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-end justify-content-center"
+                                            style="background-image: url(./img/img-two.jpeg);">
+                                            <div class="text w-100">
+                                                <span class="cat">KETUA HIMPUNAN</span>
+                                                <h3><a href="#">Dimas Nugraha</a></h3>
+                                                <span>Masa jabatan : 2014 s/d 2015</span>
+                                                <span>NIM : 211341007</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-end justify-content-center"
+                                            style="background-image: url(./img/img-three.jpeg);">
+                                            <div class="text w-100">
+                                                <span class="cat">KETUA HIMPUNAN</span>
+                                                <h3><a href="#">Mohamed Iqbal</a></h3>
+                                                <span>Masa jabatan : 2015 s/d 2016</span>
+                                                <span>NIM : 212341042</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-end justify-content-center"
+                                            style="background-image: url(./img/img-four.jpeg);">
+                                            <div class="text w-100">
+                                                <span class="cat">KETUA HIMPUNAN</span>
+                                                <h3><a href="#">Jefri Maulana</a></h3>
+                                                <span>Masa jabatan : 2015 s/d 2016</span>
+                                                <span>NIM : 210345003</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-end justify-content-center"
+                                            style="background-image: url(./img/img-five.jpeg);">
+                                            <div class="text w-100">
+                                                <span class="cat">KETUA HIMPUNAN</span>
+                                                <h3><a href="#">Septianhadi</a></h3>
+                                                <span>Masa jabatan : 2016 s/d 2017</span>
+                                                <span>NIM : 214341047</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <!-- <div class="col pt-4 text-center">
-                            <h2 class="text-dark quote text-md-end pt-5">Sejarah Kepemimpinan <span
+                        <div class="teks col pt-5 text-center">
+                            <h2 class="text-dark quote text-md-end">Sejarah Kepemimpinan <span
                                     class="judul">HIMAMO</span>
                             </h2>
-                            <p class="text-dark pt-2 text-md-end">
+                            <p class="text-dark text-md-end">
                                 Sejarah Kepemimpinan Ketua Himpunan Mahasiswa Jurusan Teknik Otomasi Manufaktur dan
-                                Mekatronika. :</p>
-                        </div> -->
+                                Mekatronika.</p>
+                        </div>
                     </div>
                 </div>
             </section>
+            <section id="prestation" class="about">
+                <div class="parallax2">
+                    <div class="container pt-5 pb-5 px-md-5">
+                        <div class="row justify-content-center mb-4">
+                            <div class="col-md-7 text-center">
+                                <h1 class="mb-3 quote">Apa Kata <span class="judul">Mereka?</span></h1>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="carousel-testimony owl-theme owl-carousel">
+                                    <div class="item">
+                                        <div class="icon d-flex align-items-center justify-content-center">
+                                            <i class='bx bxs-quote-right'></i>
+                                        </div>
+                                        <div class="testimony-wrap py-4">
+                                            <div class="text">
+                                                <p class="mb-4">Thank you HIMAMO for teaching me friendship, unity,
+                                                    community, kindness, youth, optimism, and understanding.</p>
+                                                <div class="d-flex align-items-center">
+                                                    <div class="user-img" style="background-image: url(./img/pp.jpg)">
+                                                    </div>
+                                                    <div class="ps-3">
+                                                        <p class="name">Hirzi Nurfakhrian</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="testimony-wrap py-4">
+                                            <div class="icon d-flex align-items-center justify-content-center">
+                                                <i class='bx bxs-quote-right'></i>
+                                            </div>
+                                            <div class="text">
+                                                <p class="mb-4">It's better to burn out, than to fade away.
+                                                    <br>
+                                                    <br>
+                                                    <br>
+                                                </p>
+                                                <div class="d-flex align-items-center">
+                                                    <div class="user-img" style="background-image: url(./img/pp.jpg)">
+                                                    </div>
+                                                    <div class="ps-3">
+                                                        <p class="name">Mochammad Aulia</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="testimony-wrap py-4">
+                                            <div class="icon d-flex align-items-center justify-content-center">
+                                                <i class='bx bxs-quote-right'></i>
+                                            </div>
+                                            <div class="text">
+                                                <p class="mb-4">"We began as wanderers, and we are wanderers still. So
+                                                    keep your mind curious."
+                                                    <br>
+                                                    <br>
+                                                </p>
+                                                <div class="d-flex align-items-center">
+                                                    <div class="user-img" style="background-image: url(./img/pp.jpg)">
+                                                    </div>
+                                                    <div class="ps-3">
+                                                        <p class="name">Muhammad Fikri</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="testimony-wrap py-4">
+                                            <div class="icon d-flex align-items-center justify-content-center">
+                                                <i class='bx bxs-quote-right'></i>
+                                            </div>
+                                            <div class="text">
+                                                <p class="mb-4">Berubah untuk lebih baik.
+                                                    <br>
+                                                    <br>
+                                                    <br>
+                                                </p>
+                                                <div class="d-flex align-items-center">
+                                                    <div class="user-img" style="background-image: url(./img/cwk.jpg)">
+                                                    </div>
+                                                    <div class="ps-3">
+                                                        <p class="name">Fitriani Pratiwi</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="testimony-wrap py-4">
+                                            <div class="icon d-flex align-items-center justify-content-center">
+                                                <i class='bx bxs-quote-right'></i>
+                                            </div>
+                                            <div class="text">
+                                                <p class="mb-4">Teruslah berkembang, teruslah berproses, teruslah
+                                                    menjadi lebih baik, laksanakan continous improvement.
+                                                </p>
+                                                <div class="d-flex align-items-center">
+                                                    <div class="user-img" style="background-image: url(./img/pp.jpg)">
+                                                    </div>
+                                                    <div class="ps-3">
+                                                        <p class="name">Eko Rahayu Tali Jiwa</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         </div>
         <!--Container Main end-->
         <!--jquery-->
@@ -554,9 +738,7 @@
         <!-- js gue -->
         <script type='text/javascript' src='js/main.js'></script>
         <!--owlcarousel-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-            integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script type='text/javascript' src='js/owl.carousel.min.js'></script>
         <!-- bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
@@ -600,34 +782,6 @@
 
                 // Your code to run since DOM is loaded and ready
             });
-        </script>
-        <!-- darktoggle -->
-        <script>
-            function myFunction(x) {
-                x.classList.toggle("bxs-sun");
-            }
-        </script>
-        <script>
-            $('.owl-carousel').owlCarousel({
-                stagePadding: 0,
-                animateOut: 'slideOutDown',
-                animateIn: 'flipInX',
-                loop: true,
-                margin: 10,
-                nav: false,
-                dots: false,
-                responsive: {
-                    0: {
-                        items: 1
-                    },
-                    600: {
-                        items: 1
-                    },
-                    1000: {
-                        items: 2
-                    }
-                }
-            })
         </script>
     </body>
 
