--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
             text-decoration: none
         }
 
+        h1,h2,h3,h4,h5 {
+            font-family: "Spectral", serif;
+        }
+        
+        p {
+            font-family: "Karla" , sans-serif;
+        }
+
         .header {
             width: 100%;
             height: var(--header-height);
@@ -536,7 +544,7 @@
                         <div class="col-md-8 text-md-start">
                             <div class="featured-carousel owl-carousel">
                                 <div class="item">
-                                    <div class="work">
+                                    <div class="work pb-4">
                                         <div class="img d-flex align-items-end justify-content-center"
                                             style="background-image: url(./img/img-one.jpeg);">
                                             <div class="text w-100">
