--- a/index.html
+++ b/index.html
@@ -63,12 +63,16 @@
             text-decoration: none
         }
 
-        h1,h2,h3,h4,h5 {
+        h1,
+        h2,
+        h3,
+        h4,
+        h5 {
             font-family: "Spectral", serif;
         }
-        
+
         p {
-            font-family: "Karla" , sans-serif;
+            font-family: "Karla", sans-serif;
         }
 
         .header {
@@ -291,8 +295,10 @@
                                 class="nav_name">Leadership</span> </a>
                         <a href="#" class="nav_link"> <i class='bx bx-rss nav_icon'></i></i> <span
                                 class="nav_name">Blog</span> </a>
-                        <a href="http://ae.polman-bandung.ac.id/" class="nav_link"> <i class='bx bxs-school'></i><span
-                                class="nav_name">Website AE</span> </a>
+                        <!-- <a href="http://ae.polman-bandung.ac.id/" class="nav_link"> <i class='bx bxs-school'></i><span
+                                class="nav_name">Website AE</span> </a> -->
+                        <a href="#" class="nav_link"> <i class='bx bxs-phone nav_icon'></i>Contact</span> </a>
+
                     </div>
                 </div> <a href="#" class="nav_link"> <i class='bx bx-log-in nav_icon'></i> <span
                         class="nav_name">Login</span> </a>
@@ -351,7 +357,7 @@
             </section>
 
             <section id="about" class="about">
-                <div class="container">
+                <div class="container pb-3">
                     <div class="container pb-2 px-5 pt-5">
                         <div class="row">
                             <div class="col-md text-md-start">
@@ -389,7 +395,7 @@
                         </div>
                     </div>
 
-                    <div class="container pb-5 px-5">
+                    <div class="container px-5">
                         <div class="row">
                             <div class="col-md-7">
                                 <h2 class="text-dark quote text-md-start pt-5">Apa itu <span class="judul">Himpunan
@@ -405,53 +411,39 @@
                                     merupakan media bagi anggotanya untuk mengembangkan pola pikir dan kepribadian
                                     yang
                                     berkaitan dengan disiplin ilmunya agar siap terjun ke masyarakat.</p>
+
                             </div>
-                            <div class="col-md text-md-end">
+                            <div class="col-md pb-5 text-md-end">
                                 <img class="logoae pt-5" src="img/segitiga.png">
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="row no-gutters">
-                        <div class="col-md-4 d-flex">
-                            <div class="intro d-lg-flex w-100 ftco-animate">
-                                <div class="icon">
-                                    <span class="flaticon-support"></span>
-                                </div>
-                                <div class="text">
-                                    <h2>Online Support 24/7</h2>
-                                    <p>A small river named Duden flows by their place and supplies it with
-                                        the necessary
-                                        regelialia.</p>
-                                </div>
+
+                    <div class="container pb-5">
+                        <div class="row">
+                            <div class="col-6 pt-5 text-center">
+                                <i class='icon2 bx bxs-contact'></i>
+                                <h2 class="value" count="218"></h2>
+                                <h5 class="karla">Anggota</h5>
+                            </div>
+                            <div class="col-6 pt-5 text-center">
+                                <i class='icon2 bx bxs-bank'></i>
+                                <h2 class="value" count="25"></h2>
+                                <h5 class="karla">Angkatan</h5>
+                            </div>
+                            <div class="col-6 pt-5 text-center">
+                                <i class='icon2 bx bxs-trophy'></i>
+                                <h2 class="value" count="2"></h2>
+                                <h5 class="karla">Kejuaran</h5>
+                            </div>
+                            <div class="col-6 pt-5 text-center">
+                                <i class='icon2 bx bxs-flag'></i>
+                                <h2 class="value" count="1"></h2>
+                                <h5 class="karla">Bendera</h5>
                             </div>
                         </div>
-                        <div class="col-md-4 d-flex">
-                            <div class="intro color-1 d-lg-flex w-100 ftco-animate">
-                                <div class="icon">
-                                    <span class="flaticon-cashback"></span>
-                                </div>
-                                <div class="text">
-                                    <h2>Money Back Guarantee</h2>
-                                    <p>A small river named Duden flows by their place and supplies it with
-                                        the necessary
-                                        regelialia.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 d-flex">
-                            <div class="intro color-2 d-lg-flex w-100 ftco-animate">
-                                <div class="icon">
-                                    <span class="flaticon-free-delivery"></span>
-                                </div>
-                                <div class="text">
-                                    <h2>Free Shipping &amp; Return</h2>
-                                    <p>A small river named Duden flows by their place and supplies it with
-                                        the necessary
-                                        regelialia.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
+                    </div>
+
                 </div>
             </section>
             <section id="history" class="about">
@@ -738,7 +730,6 @@
                     </div>
                 </div>
             </section>
-
         </div>
         <!--Container Main end-->
         <!--jquery-->
